src/page-modules/departures/stop-place/stop-place.module.css
.stopPlaceContainer {
  display: grid;
  grid-template-columns: 2fr 3fr;
  grid-auto-rows: auto minmax(37.5rem, auto) auto;
  grid-template-areas: 'messages messages' 'quays map';
  gap: token('spacing.medium');
}

.stopPlaceMessages {
  grid-area: messages;
}

.mapContainer {
  grid-area: map;
  max-height: 37.5rem;
  border-radius: token('border.radius.regular');
  overflow: hidden;
}

.quaysContainer {
  grid-area: quays;
  display: flex;
  flex-direction: column;
  gap: token('spacing.small');
}
.quaysContainer li {
  list-style: none;
}

.quaysHeader {
  display: flex;
  gap: token('spacing.small');
  flex-direction: row;
  align-items: center;
}

.quaysHeader h2 {
  flex: 1;
}

.dateNavigation {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: token('spacing.small');
}

.dateNavigation__date {
  text-align: center;
}

.estimatedCallsList {
  border-radius: token('border.radius.regular');
  overflow: hidden;
}

.estimatedCallsList li {
  border-bottom: 1px solid token('color.background.neutral.2.background');
}
.estimatedCallsList li:last-child {
  border-bottom: none;
}

.listHeader {
  border: none;
  width: 100%;
  display: flex;
  align-items: center;
  gap: token('spacing.xSmall');
  justify-content: space-between;
  border-radius: token('border.radius.regular') token('border.radius.regular') 0
    0;
  border-bottom: 1px solid token('color.background.neutral.2.background');
  padding: token('spacing.small') token('spacing.medium');
  cursor: pointer;
  color: token('color.interactive.2.default.foreground.primary');
  background-color: token('color.interactive.2.default.background');
}

.listHeader:hover {
  color: token('color.interactive.2.hover.foreground.primary');
  background-color: token('color.interactive.2.hover.background');
}

.listHeader:active {
  color: token('color.interactive.2.active.foreground.primary');
  background-color: token('color.interactive.2.active.background');
}
.listHeader:disabled {
  color: token('color.interactive.2.disabled.foreground.primary');
  background-color: token('color.interactive.2.disabled.background');
}

.listHeader--collapsed {
  border-bottom: none;
}

.textColor__secondary {
  color: token('color.foreground.dynamic.secondary');
}

.seeMoreButton {
  border-radius: 0;
}

.flex__row {
  display: flex;
  align-items: center;
  gap: token('spacing.xSmall');
  flex-wrap: wrap;
}

.listItem {
  border: none;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: token('color.interactive.2.default.background');
  color: token('color.interactive.2.default.foreground.primary');
  padding: token('spacing.medium');
  text-decoration: none;
  cursor: pointer;
}
.listItem:hover {
  color: token('color.interactive.2.hover.foreground.primary');
  background-color: token('color.interactive.2.hover.background');
}
.listItem:active {
  color: token('color.interactive.2.active.foreground.primary');
  background-color: token('color.interactive.2.active.background');
}
.listItem:disabled {
  color: token('color.interactive.2.disabled.foreground.primary');
  background-color: token('color.interactive.2.disabled.background');
}

.transportInfo {
  display: flex;
  gap: token('spacing.medium');
  align-items: center;
  position: relative;
}
.situationIcon {
  position: absolute;
  top: calc(token('spacing.small') * -1);
  left: calc(token('spacing.small') * -1);
}

@media only screen and (max-width: 650px) {
  .stopPlaceContainer {
    grid-template-areas: 'map' 'messages' 'quays';
    grid-template-columns: auto;
    grid-template-rows: auto;
  }
}

